--- a/assets/stylesheets/searchable_selectbox.css
+++ b/assets/stylesheets/searchable_selectbox.css
@@ -37,8 +37,8 @@ fieldset#filters td.values .select2-container--default {
   min-width: 100px;
 }
 .tabular .splitcontent .select2-container {
-  width: 75%;
-  max-width: 300px;
+  #width: 75%;
+  #max-width: 300px;
 }
 #add_filter_select + .select2-container,
 #group_by + .select2-container {
